Added forgot password methods
